@startuml AdditionLayerDependencies

package "MeshAdderCallablesPlugin"{
    class MeshVaoInitCallable
    class SceneMeshAdderCallable
}
MeshAdderCallablesPlugin --> AddNodesToOutlinerLayerPlugin


package "AddCubePlugin" {
    class AddCubeCommand
    class AddCubeCallback
    class CubeVertexGenCallable

    AddCubeCallback --> CubeVertexGenCallable      
}
AddCubePlugin --> MeshAdderCallablesPlugin
AddCubePlugin --> AddNodesToOutlinerLayerPlugin

package "AddPlanePlugin" {
    class AddPlaneCommand
    class AddPlaneCallback
    class PlaneVertexGenCallable

    AddPlaneCallback --> PlaneVertexGenCallable
}
AddPlanePlugin --> MeshAdderCallablesPlugin
AddPlanePlugin --> AddNodesToOutlinerLayerPlugin

package "FetchSurfacePlugin" {
    class FetchSurfaceCommand
    class FetchSurfaceCallback
    class FetchedSurfaceVertexGenCallable

    FetchSurfaceCallback --> FetchedSurfaceVertexGenCallable
}
FetchSurfacePlugin --> MeshAdderCallablesPlugin
FetchSurfacePlugin --> AddNodesToOutlinerLayerPlugin

package "AdditionalLayerPlugin"{
    class AdditionLayer
}
AdditionLayerPlugin --> AddCubePlugin
AdditionLayerPlugin --> AddPlanePlugin
AdditionLayerPlugin --> FetchSurfacePlugin

@enduml